--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,14 @@ transformers = "^4.46.3"
 matplotlib = "^3.9.2"
 pandas = "^2.2.3"
 unidecode = "^1.3.8"
-mecab = "^0.996.5"
+unidic-lite = "^1.0.8"
+fugashi = "^1.4.0"
+protobuf = "^5.29.0"
+opencv-python = "^4.10.0.84"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
