--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Naoya_Nakagawa_Sivax <n-nakagawa_d1@sivax.co.jp>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.10, <4.0"
 requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
 janome = "^0.5.0"
@@ -21,7 +21,9 @@ unidic-lite = "^1.0.8"
 fugashi = "^1.4.0"
 protobuf = "^5.29.0"
 opencv-python = "^4.10.0.84"
-
+numpy = "^1.23"  # 追加
+mtcnn = "0.1.0"    # 明示的にバージョンを指定
+tensorflow = "2.18.0"  # 明示的にバージョンを指定
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
