--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,11 @@
 name = "emotiondetection-fromtext"
 version = "0.1.0"
 description = ""
-authors = ["Naoya_Nakagawa_Sivax <n-nakagawa_d1@sivax.co.jp>"]
+authors = ["Naoya_Nakagawa <nakagawa.naoya.xr@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10, <4.0"
+python = ">=3.10,<3.12"
 requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
 janome = "^0.5.0"
@@ -24,6 +24,10 @@ opencv-python = "^4.10.0.84"
 numpy = "^1.23"  # 追加
 mtcnn = "0.1.0"    # 明示的にバージョンを指定
 tensorflow = "2.18.0"  # 明示的にバージョンを指定
+tensorflow-io-gcs-filesystem = "0.31.0"
+ipykernel = "^6.29.5"
+torch = { version = "^2.6.0+cpu", source = "pytorch-cpu" }
+torchvision = { version = "^0.17.0+cpu", source = "pytorch-cpu" }
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
