[Add]: 自宅のPCでの開発環境を整えるために、.gitignoreと.python-versionを追加。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,17 +21,22 @@ unidic-lite = "^1.0.8"
 fugashi = "^1.4.0"
 protobuf = "^5.29.0"
 opencv-python = "^4.10.0.84"
-numpy = "^1.23"  # 追加
-mtcnn = "0.1.0"    # 明示的にバージョンを指定
-tensorflow = "2.18.0"  # 明示的にバージョンを指定
+numpy = "^1.23"
+mtcnn = "0.1.0"
+tensorflow = "2.18.0"
 tensorflow-io-gcs-filesystem = "0.31.0"
 ipykernel = "^6.29.5"
-torch = { version = "^2.6.0+cpu", source = "pytorch-cpu" }
-torchvision = { version = "^0.17.0+cpu", source = "pytorch-cpu" }
+
+# ✅ CUDA 12.1 対応の torch/torchvision/torchaudio にだけ source を指定
+torch = { version = "2.2.0+cu121", source = "pytorch-cu121" }
+torchvision = { version = "0.17.0+cu121", source = "pytorch-cu121" }
+torchaudio = { version = "2.2.0+cu121", source = "pytorch-cu121" }
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+# ✅ 追加：PyTorch公式リポジトリ
+[[tool.poetry.source]]
+name = "pytorch-cu121"
+url = "https://download.pytorch.org/whl/cu121"
+priority = "explicit"
